// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AntdHorzColor hsl 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-1h8ihea-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          accent
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          #8c7873
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor hsla 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-1t8wt0p-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          accent
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          #8c7873
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor name 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-1a87q4z-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          brand
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          #e95b54
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-yxgeg7-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          #cf1322
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          207, 19, 34
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1kw8sdp-FlexContainer"
  >
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-1mftmip-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-1
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #fff1f0
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-iye3sn-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-2
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #ffccc7
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-1tbmaqy-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-3
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #ffa39e
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-1ztjbi-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-4
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #ff7875
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-6lf98k-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-5
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #ff4d4f
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-fsnyeo-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-6
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #f5222d
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-yxgeg7-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-7
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #cf1322
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-skiu9w-AntdHorzColor"
    >
      <div
        class="css-1mveibm-AntdHorzColor"
        style="display: inline-block;"
      >
        <div
          class="css-1uxip3h-AntdHorzColor"
        >
          <div
            class="css-1936eml-AntdHorzColor"
          >
            red-8
          </div>
          <div
            class="css-ibsyrz-AntdHorzColor"
          >
            #a8071a
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor rgb 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-1th2ox9-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          text
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          #000000
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AntdHorzColor rgba 1`] = `
<DocumentFragment>
  <div
    class="css-skiu9w-AntdHorzColor"
  >
    <div
      class="css-1mveibm-AntdHorzColor"
      style="display: inline-block;"
    >
      <div
        class="css-r5kfc4-AntdHorzColor"
      >
        <div
          class="css-1936eml-AntdHorzColor"
        >
          shadow
        </div>
        <div
          class="css-ibsyrz-AntdHorzColor"
        >
          #000000
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
